--- a/ToDo
+++ b/ToDo
@@ -1,5 +1,1 @@
-For 2/4/19
-
-Decide the final database schema for the app and create and set all the necessary files required (Models, Daos, Repo etc. Also decide the relationships between the tables).
-
-Try to finish up the basic UI required for the first prototype of the app. 
+Clean up the ChatSessionDao. A lot of unnecessary methods are written over there.
