--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">PeerLink</string>
     <string name="type_your_message">Type your message</string>
 
+    <string name="about">About</string>
+    <string name="settings">Settings</string>
+    <string name="delete">Delete</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
